:scissors: refactor: change title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: anoff's blog
+title: Andreas' blog
 subtitle: Adventures of a Software Developer/Architect 🎢
 use-site-title: true
 ---
